--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "jsdom-quokka-plugin": "^1.0.16",
     "node-fetch": "^3.0.0"
   },
   "devDependencies": {},
